Mon Jan 10 14:02:08 UTC 2011  Olli Savia  <ops@iki.fi>

        * tests/OctetSeq/client.cpp:
        * tests/Param_Test/anyop.cpp:
          Use ACE::is_equal() to compare floating point values.

Wed Jan  5 13:14:09 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * orbsvcs/orbsvcs/Naming/Naming_Server.cpp:
          Fixed crash during Naming Server finalization that was happening
          when it didn't start properly and POA was not initialized.

Mon Jan  3 14:12:04 UTC 2011  Olli Savia  <ops@iki.fi>

        * tests/LongDouble/client.cpp:
          Reverted change "Fri Dec 31 09:12:53 UTC 2010  Olli Savia  <ops@iki.fi>"
          which broke 32-bit builds.

Sat Jan  1 10:48:07 UTC 2011  Olli Savia  <ops@iki.fi>

        * orbsvcs/tests/Notify/lib/Task_Stats.cpp:
          Added missing include.

Fri Dec 31 09:12:53 UTC 2010  Olli Savia  <ops@iki.fi>

        * orbsvcs/examples/LoadBalancing/server.cpp:
        * orbsvcs/tests/InterfaceRepo/Application_Test/ifr_dii_client.cpp:
        * orbsvcs/tests/Notify/lib/Task_Stats.cpp:
        * orbsvcs/tests/unit/Notify/MC/NotificationServiceMonitor/NotificationServiceMonitor.cpp:
        * orbsvcs/tests/unit/Trading/Interpreter/Interpreter.cpp:
        * tests/CDR/alignment.cpp:
        * tests/LongDouble/client.cpp:
          Use ACE::is_equal() to compare floating point values.

Thu Dec 30 09:01:39 UTC 2010  Olli Savia  <ops@iki.fi>

        * orbsvcs/orbsvcs/LoadBalancing/LB_LeastLoaded.inl:
        * orbsvcs/orbsvcs/LoadBalancing/LB_LeastLoaded.cpp:
        * orbsvcs/orbsvcs/LoadBalancing/LB_LoadAverage.inl:
        * orbsvcs/orbsvcs/LoadBalancing/LB_LoadAverage.cpp:
        * orbsvcs/orbsvcs/LoadBalancing/LB_LoadMinimum.inl:
        * orbsvcs/orbsvcs/LoadBalancing/LB_LoadMinimum.cpp:
          Use ACE::is_equal() to compare floating point values.

Wed Dec 29 09:11:54 UTC 2010  Olli Savia  <ops@iki.fi>

        * orbsvcs/orbsvcs/Trader/Constraint_Visitors.cpp: