@@ -2030,7 +2030,7 @@ Admin_Client::constant_test (void)
                   out_double_val));
     }
 
-  ACE_ASSERT (out_double_val == double_val);
+  ACE_ASSERT (ACE::is_equal (out_double_val, double_val));
 
   ivar = this->repo_->get_primitive (CORBA::pk_short);
   cvar->type_def (ivar.in ());
@@ -2086,7 +2086,7 @@ Admin_Client::constant_test (void)
                   out_float_val));
     }
 
-  ACE_ASSERT (out_float_val == float_val);
+  ACE_ASSERT (ACE::is_equal (out_float_val, float_val));
 
   ivar = this->repo_->get_primitive (CORBA::pk_ulonglong);
   cvar->type_def (ivar.in ());
